Added styling for header and main website text.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
 .header, .top-main {
     background-color: #1F2937;
 }
+
+h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style-type: none;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-list {
+    font-size: 18px;
+    color: #E5E7EB;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.logo-text {
+    font-size: 24px;
+    color: #F9FAF8;
+}
