--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.header, .top-main {
+.header, .top-main, .footer{
     background-color: #1F2937;
 }
 
@@ -16,6 +16,8 @@ li {
 }
 
 .header {
+    margin: 0%;
+    padding: 0%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,4 +39,9 @@ li {
 .second-main {
     background-color: #E5E7EB;
     display: flex;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
