--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .header, .top-main, .footer{
     background-color: #1F2937;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -9,6 +10,7 @@ h1 {
 }
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 li {
@@ -21,6 +23,7 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
 }
 
 .header-list {
@@ -29,6 +32,11 @@ li {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+}
+
+.top-image {
+    max-width: 300px;
+    max-height: 300px;
 }
 
 .logo-text {
@@ -44,4 +52,8 @@ li {
 body {
     display: flex;
     flex-direction: column;
+}
+
+.top-main {
+    display: flex;
 }
