--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .header, .top-main, .footer{
     background-color: #1F2937;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -19,7 +18,6 @@ li {
 
 .header {
     margin: 0%;
-    padding: 0%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,9 +32,14 @@ li {
     gap: 10px;
 }
 
-.top-image {
+img {
     max-width: 300px;
     max-height: 300px;
+}
+
+.four-images {
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .logo-text {
@@ -52,6 +55,9 @@ li {
 body {
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .top-main {
