Fixed footer class, added more containers

--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ li {
     gap: 10px;
 }
 
+.top-text {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
 img {
     max-width: 300px;
     max-height: 300px;
