--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ li {
 .top-text {
     display: flex;
     flex-direction: column;
+    padding: 60px;
 }
 
 .top-subtext {
@@ -51,24 +52,31 @@ li {
 }
 
 img {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 20px;
 }
 
 .top-image {
     padding: 10px;
+    align-self: center;
 }
 
 .random-title {
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    padding: 25px;
 }
 
 .four-images {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 20px;
+}
+
+.illustration-text {
+    max-width: 200px;
 }
 
 .image-one, .image-two, .image-three, .image-four {
@@ -97,5 +105,11 @@ body {
 
 .top-main {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+}
+
+.first-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
