--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ li {
 }
 
 .Sign-Up {
-    border: 0px;
     border-radius: 5px;
     background-color: #3882f6;
     color: #E5E7EB;
@@ -93,6 +92,7 @@ img {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
+    padding: 40px;
 }
 
 body {
@@ -122,5 +122,14 @@ body {
 }
 .quote-author {
     font-weight: bold;
-    align-self: flex-end;
+    align-self: center;
+    font-size: 24px;
+}
+
+.third-main {
+    background-color: #3882F6;
+    border-radius: 20px;
+    display: flex;
+    flex-flow: column wrap;
+    margin: 30px;
 }
